为client与Vserver的聊天服务添加了rsa(des(pack))